; ModuleID = '/home/carl/AnghaBench/sqlcipher/tool/extr_lemon.c_file_open.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/tool/extr_lemon.c_file_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lemon = type { i8*, i32 }

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"Can't open file \22%s\22.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @file_open(%struct.lemon* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.lemon*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  store %struct.lemon* %0, %struct.lemon** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %9 = load %struct.lemon*, %struct.lemon** %5, align 8
  %10 = getelementptr inbounds %struct.lemon, %struct.lemon* %9, i32 0, i32 0
  %11 = load i8*, i8** %10, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %13, label %18

13:                                               ; preds = %3
  %14 = load %struct.lemon*, %struct.lemon** %5, align 8
  %15 = getelementptr inbounds %struct.lemon, %struct.lemon* %14, i32 0, i32 0
  %16 = load i8*, i8** %15, align 8
  %17 = call i32 @free(i8* %16)
  br label %18

18:                                               ; preds = %13, %3
  %19 = load %struct.lemon*, %struct.lemon** %5, align 8
  %20 = load i8*, i8** %6, align 8
  %21 = call i8* @file_makename(%struct.lemon* %19, i8* %20)
  %22 = load %struct.lemon*, %struct.lemon** %5, align 8
  %23 = getelementptr inbounds %struct.lemon, %struct.lemon* %22, i32 0, i32 0
  store i8* %21, i8** %23, align 8
  %24 = load %struct.lemon*, %struct.lemon** %5, align 8
  %25 = getelementptr inbounds %struct.lemon, %struct.lemon* %24, i32 0, i32 0
  %26 = load i8*, i8** %25, align 8
  %27 = load i8*, i8** %7, align 8
  %28 = call i32* @fopen(i8* %26, i8* %27)
  store i32* %28, i32** %8, align 8
  %29 = load i32*, i32** %8, align 8
  %30 = icmp eq i32* %29, null
  br i1 %30, label %31, label %46

31:                                               ; preds = %18
  %32 = load i8*, i8** %7, align 8
  %33 = load i8, i8* %32, align 1
  %34 = sext i8 %33 to i32
  %35 = icmp eq i32 %34, 119
  br i1 %35, label %36, label %46

36:                                               ; preds = %31
  %37 = load i32, i32* @stderr, align 4
  %38 = load %struct.lemon*, %struct.lemon** %5, align 8
  %39 = getelementptr inbounds %struct.lemon, %struct.lemon* %38, i32 0, i32 0
  %40 = load i8*, i8** %39, align 8
  %41 = call i32 @fprintf(i32 %37, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i8* %40)
  %42 = load %struct.lemon*, %struct.lemon** %5, align 8
  %43 = getelementptr inbounds %struct.lemon, %struct.lemon* %42, i32 0, i32 1
  %44 = load i32, i32* %43, align 8
  %45 = add nsw i32 %44, 1
  store i32 %45, i32* %43, align 8
  store i32* null, i32** %4, align 8
  br label %48

46:                                               ; preds = %31, %18
  %47 = load i32*, i32** %8, align 8
  store i32* %47, i32** %4, align 8
  br label %48

48:                                               ; preds = %46, %36
  %49 = load i32*, i32** %4, align 8
  ret i32* %49
}

declare dso_local i32 @free(i8*) #1

declare dso_local i8* @file_makename(%struct.lemon*, i8*) #1

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @fprintf(i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
